# mcp-server

./: .gitignore  pyproject.toml
app/: server.py
app/tools/: jira.py
