[project]
name = "custom-mcp-server"
version = "0.1.0"
description = "JIRA MCP Server for Cursor"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
